--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     }
   },
   "dependencies": {
-    "expo": "^25.0.0",
-    "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react": "16.0.0",
+    "react-native": "0.51.0",
+    "react-native-maps": "0.20.1"
   }
 }
