--- a/app.json
+++ b/app.json
@@ -1,8 +1,13 @@
 {
   "expo": {
+    "name": "Hermes",
+    "description": "An instant messaging application that displays the messages in your language",
     "sdkVersion": "25.0.0",
     "packagerOpts": {
-      "sourceExts": ["ts", "tsx"],
+      "sourceExts": [
+        "ts",
+        "tsx"
+      ],
       "transformer": "node_modules/react-native-typescript-transformer/index.js"
     }
   }
