Add react-router-native dependency

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     }
   },
   "dependencies": {
+    "@types/react-router-native": "^4.2.1",
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0"
