--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-router-native": "^4.2.1",
     "expo": "^25.0.0",
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-router-native": "^4.2.0"
   }
 }
