--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,17 @@
     "sourceMap": true,
     "experimentalDecorators": true,
     "jsx": "react-native",
-    "lib": ["dom", "es2015", "es2016"],
+    "lib": [
+      "dom",
+      "es2015",
+      "es2016"
+    ],
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "noEmitHelpers": true,
     "importHelpers": true,
     "strict": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "skipLibCheck": true
   }
 }
