--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,9 @@
             "jsx": true
         }
     },
+    "env": {
+        "jest": true
+    },
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended"
@@ -14,7 +17,7 @@
     ],
     "rules": {
         "indent": [
-            "error",
+            "warn",
             2
         ],
         "linebreak-style": [
@@ -26,7 +29,7 @@
             "always"
         ],
         "quotes": [
-            "error",
+            "warn",
             "single"
         ]
     }
