--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
+    "react-native-elements": "^0.19.0",
     "react-router-native": "^4.2.0"
   }
 }
